[package]
name = "remaining-cert-days"
version = "0.2.0"
edition = "2021"
default-run = "remaining-cert-days"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "experimental" }

[dependencies]
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
chrono = { version = "0.4.38", features = ["default"] }
tempfile = { version = "3.14.0" }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
stderrlog = { version = "0.6.0", features = ["chrono", "timestamps"] }
structopt = { version = "0.3.26", features = ["doc"] }